Ready to Commit

--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chapter 6-9</title>
+    <title>Assignment 5</title>
     <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
 </head>
 <body onload="getData()">
+    <!-- CHAPTER 01 -->
+    <h1 style="text-align: center; background-color: bisque;">CHAPTER 01</h1>
+    <button id="chap1btn" type="button" onclick="showAlert()">CLICK ME!!</button>
+
+
+    <!-- CHAPTER 06 - 09 -->
+    <h1 style="text-align: center; background-color: bisque;">CHAPTER 06 - 09</h1>
     <table id="table">
         <tr>
             <td><b>Subject</b></td>
@@ -41,4 +47,5 @@
         </tr>
     </table>
 </body>
+    <script src="app.js"></script>
 </html>
